# G0Z39A

./: .gitignore  README.md  requirements.txt
Part I - Python Fundamentals for Data Scientists/2.1 - Python Modules/: notebook.ipynb
Part I: Python Fundamentals for Data Scientists/I.2.3: Creating your own package/: LICENSE  manifest.in  pyproject.toml
Part III - IT Infrastructure for Data Science and Analytics/1.3 - Kedro MLFlow/mda-project/: README.md  pyproject.toml  requirements.txt  stats.json
Part III - IT Infrastructure for Data Science and Analytics/1.3 - Kedro MLFlow/mda-project/conf/base/: catalog.yml  parameters_data_engineering.yml  parameters_evaluation.yml  parameters_feature_engineering.yml  parameters_model_development.yml
Part III - IT Infrastructure for Data Science and Analytics/1.3 - Kedro MLFlow/mda-project/src/mda_project/: __init__.py  __main__.py  hooks.py  settings.py
Part III - IT Infrastructure for Data Science and Analytics/1.3 - Kedro MLFlow/mda-project/src/mda_project/pipelines/data_engineering/: __init__.py  pipeline.py
Part III - IT Infrastructure for Data Science and Analytics/1.3 - Kedro MLFlow/mda-project/src/mda_project/pipelines/evaluation/: __init__.py  pipeline.py
Part III - IT Infrastructure for Data Science and Analytics/1.3 - Kedro MLFlow/mda-project/src/mda_project/pipelines/feature_engineering/: __init__.py  pipeline.py
Part III - IT Infrastructure for Data Science and Analytics/1.3 - Kedro MLFlow/mda-project/src/mda_project/pipelines/model_development/: __init__.py  pipeline.py
(+41 files in other folders)
